# parley

./: README.md  pyproject.toml
parley/: __init__.py  client.py  matcher.py  server.py  types.py
tests/: test_client.py  test_e2e.py  test_integration.py  test_matcher.py  test_pympp_integration.py  test_server.py  test_validation.py
