[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parley-mpp"
version = "0.1.0"
description = "Tiered pricing for MPP endpoints. Agents pick the best deal from a menu."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
mpp = ["pympp>=0.5"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["parley"]
